--- a/contents/accessible/convenience.tex
+++ b/contents/accessible/convenience.tex
@@ -38,7 +38,7 @@ in which it is found. \\
     \caption{Arquitecture Aire Guru}
 \end{figure}
 
-Mediante una interfaz web, muestra los datos al usuarios.\\
+Through a web interface, it shows the data to the users. \\
 
 \begin{figure}[ht]
     \centering
