--- a/contents/evaluation.tex
+++ b/contents/evaluation.tex
@@ -1,36 +1,26 @@
 \newpage
 \section{Evaluation}
-Para la valoración de la experiencia de usuario, se ha propuesto a 14 usuarios que prueben la herramienta libremente. 
-Tras una semana, se propone a los usuarios de prueba la siguiente encuesta
-Esta encuesta contiene preguntas concretas sobre la comprensibilidad de la información y sobre la usabilidad. Además, 
-se les proporciona un espacio en cada una de las preguntas para que los encuestados puedan realizar sus propias aportaciones. 
-
+For the evaluation of the user experience, 14 users have been presented who test the tool freely.
+After a week, test users are proposed a survey that contains questions about understandability
+of information and about usability. Also, in the case of the questions so that the
+Respondents can make their own contributions.
 \begin{figure}[ht]
    \centering
    \includegraphics[width=12cm]{enqueteResults}
    \caption{Part of the user experience enquete results}
 \end{figure}
 
-En cuanto a los comentarios, la mayoría de los encuestados coinciden que la funcionalidad que más les ha gustado es ver en el 
-mapa el índice de calidad del aire y sugieren una ampliación el número de zonas.
-El 92\% de los encuestados encuentra la información útil y completa y el 71,43\% ha contestado que también la encuentran 
-comprensible.
-Más de la mitad de los encuestados admiten que no conocían el significado del índice de calidad del aire, pero después de 
-consultar la ayuda, lo han entendido.
-Respecto a sus intereses sobre la calidad del aire, la mitad de ellos indican que alguna vez han buscado información sobre ello, 
-sólo dos están bien informados y uno de ellos marca la opción otros y especifica que ha despertado su interés después de utilizar 
-la aplicación.
-Además, cuatro de ellos indican que han descubierto que tienen una condición médica a la que le afecta la calidad del aire gracias 
-a la herramienta.
+Regarding the comments, most of the respondents agree that the functionality they liked the most is to see in the
+map the air quality index and suggest an enlargement the number of zones.
+92 \% of the respondents find the information useful and complete and 71.43 \% have answered that they also find it
+understandable.
+More than half of the respondents admit that they did not know the meaning of the air quality index, but after
+consult the help, they have understood it.
+Regarding their interests on air quality, half of them indicate that they have ever sought information about it,
+only two are well informed and one of them marks the other option and specifies that it has aroused their interest after using
+the application.
+In addition, four of them indicate that they have discovered that they have a medical condition that affects the quality of the air thanks
+to the tool.
 
-Entre los sujetos de prueba, se ha reconocido una mayor concienciación por la contaminación, demostrando más interés sobre la 
-calidad del aire en la ciudad y sus posibles efectos en la salud
-
-\begin{itemize}
-   \item  { Methodology, Results } / 
-   \item   -Enquete, real test results...
-   \item   -Analysis of the results   
-   \item   Podemos entender  que significa cada uno de los campos representados en el conjunto de dato gracias a la 
-   informacion complementaria presentada en el portal de datos abiertos y por la informacion proporcionada por la 
-   empresa encargada de  recolectar los datos.
-\end{itemize}
+Among the test subjects, a greater awareness of pollution has been recognized, showing more interest in the
+air quality in the city and its possible effects on health
